@@ -27,6 +27,7 @@ Release 0.20.2 - Unreleased
                (Andrew McCall via Clint Morgan and Stack)
    HBASE-1953  Overhaul of overview.html (html fixes, typos, consistency) -
                no content changes (Lars Francke via Stack)
+   HBASE-1954  Transactional scans do not see newest put (Clint Morgan via Stack)
 
   IMPROVEMENTS
    HBASE-1899  Use scanner caching in shell count
